# nifi-flow-registry-tutorial

default/: MyFlow.json  OpenSky.json
default/transform_opensky_states/processors/: LICENSE.txt  README.md  pyproject.toml
default/transform_opensky_states/processors/src/processors/: __about__.py  __init__.py  transform_opensky_states.py
